welcome.lessons.welcome.variables.Variables.scala.code
var nbPas : Int = 0
while (estSurBiscuit()!=True) {
  avance()
  nbPas=nbPas+1
}  
if (EstSurBiscuit()==True) {
  prendBiscuit()
}
var DejaFait=0
while (DejaFait!=nbPas){
  recule()
  DejaFait=DejaFait+1
}